<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationAvocado"
        android:layout_width="121dp"
        android:layout_height="77dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/healthyavocado"
        app:lottie_url="REPLACE_JSON_URL"
        tools:visibility="visible" />-->

    <TextView
        android:id="@+id/textTittle"
        android:layout_width="353dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/titulotext"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextAltura"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/alturaHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textTittle"
        app:layout_constraintTop_toBottomOf="@+id/textTittle" />

    <EditText
        android:id="@+id/editTextTextPeso"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/pesoHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextAltura"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextAltura" />

    <RadioGroup
        android:id="@+id/radiogruoupe"
        android:layout_width="327dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPeso">


        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/female" />

    </RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/submit"
        android:textColor="@color/design_default_color_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogruoupe"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/mostradoIMC"
        android:layout_width="124dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/prueba"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEmoji" />

    <ImageView
        android:id="@+id/imgEmoji"
        android:layout_width="73dp"
        android:layout_height="101dp"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606"
        tools:contentDescription="@string/contentdescription"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>